@@ -436,6 +436,9 @@ BUGFIXES:
   ZOOKEEPER-1181. Fix problems with Kerberos TGT renewal.
   (Eugene Koontz via mahadev)
 
+  ZOOKEEPER-1268. problems with read only mode, intermittent test failures 
+  and ERRORs in the log (phunt via mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
